; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powernv/extr_opal_async.c_opal_handle_async_completion.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powernv/extr_opal_async.c_opal_handle_async_completion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.opal_msg = type { i32* }

@completions = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.opal_msg*)* @opal_handle_async_completion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @opal_handle_async_completion(i8* %0, %struct.opal_msg* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.opal_msg*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.opal_msg* %1, %struct.opal_msg** %4, align 8
  %6 = load %struct.opal_msg*, %struct.opal_msg** %4, align 8
  %7 = getelementptr inbounds %struct.opal_msg, %struct.opal_msg* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completions, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load %struct.opal_msg*, %struct.opal_msg** %4, align 8
  %17 = call i32 @memcpy(i32* %15, %struct.opal_msg* %16, i32 8)
  %18 = call i32 (...) @atomic_thread_fence_rel()
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completions, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 4
  ret void
}

declare dso_local i32 @memcpy(i32*, %struct.opal_msg*, i32) #1

declare dso_local i32 @atomic_thread_fence_rel(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
